--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==2.2.7
 importlib-metadata==0.23
 kombu==4.6.6
 more-itertools==7.2.0
+psycopg2-binary==2.8.4
 pytz==2019.3
 sqlparse==0.3.0
 vine==1.3.0
